Make it work, then make it fast

--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2014.11-g30aebc6 Configuration
+# Buildroot 2014.11-ga0e4fc6-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -263,9 +263,9 @@ BR2_INIT_BUSYBOX=y
 #
 # BR2_INIT_NONE is not set
 # BR2_ROOTFS_DEVICE_CREATION_STATIC is not set
-BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS=y
+# BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_DEVTMPFS is not set
 # BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_MDEV is not set
-# BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV is not set
+BR2_ROOTFS_DEVICE_CREATION_DYNAMIC_EUDEV=y
 BR2_ROOTFS_DEVICE_TABLE="system/device_table.txt"
 # BR2_ROOTFS_SKELETON_DEFAULT is not set
 BR2_ROOTFS_SKELETON_CUSTOM=y
@@ -291,9 +291,9 @@ BR2_LINUX_KERNEL_CUSTOM_VERSION=y
 BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE="3.12.35"
 BR2_LINUX_KERNEL_VERSION="3.12.35"
 BR2_LINUX_KERNEL_PATCH="http://dl.guillermoamaral.com/rpi/kernel-3.12.35.patch"
-# BR2_LINUX_KERNEL_USE_DEFCONFIG is not set
-BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="rpi.kernel.config"
+BR2_LINUX_KERNEL_USE_DEFCONFIG=y
+# BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG is not set
+BR2_LINUX_KERNEL_DEFCONFIG="bcmrpi"
 # BR2_LINUX_KERNEL_UIMAGE is not set
 # BR2_LINUX_KERNEL_APPENDED_UIMAGE is not set
 BR2_LINUX_KERNEL_ZIMAGE=y
@@ -512,12 +512,9 @@ BR2_PACKAGE_GETTEXT=y
 # BR2_PACKAGE_FBV is not set
 # BR2_PACKAGE_IMAGEMAGICK is not set
 # BR2_PACKAGE_LINUX_FUSION is not set
+# BR2_PACKAGE_MESA3D is not set
 BR2_PACKAGE_PROVIDES_LIBEGL="rpi-userland"
 BR2_PACKAGE_PROVIDES_LIBGLES="rpi-userland"
-
-#
-# mesa3d needs udev /dev management and a toolchain w/ C++, largefile, NPTL
-#
 # BR2_PACKAGE_OCRAD is not set
 # BR2_PACKAGE_PSPLASH is not set
 # BR2_PACKAGE_SDL is not set
@@ -530,10 +527,7 @@ BR2_PACKAGE_PROVIDES_LIBGLES="rpi-userland"
 BR2_PACKAGE_QT5_GL_AVAILABLE=y
 BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 # BR2_PACKAGE_QT5 is not set
-
-#
-# weston needs udev and a toolchain w/ threads, dynamic library, headers >= 3.0
-#
+# BR2_PACKAGE_WESTON is not set
 # BR2_PACKAGE_XORG7 is not set
 
 #
@@ -571,10 +565,7 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 # BR2_PACKAGE_A10DISP is not set
 # BR2_PACKAGE_AM335X_PRU_PACKAGE is not set
 # BR2_PACKAGE_AVRDUDE is not set
-
-#
-# bcache-tools needs udev /dev management and a toolchain w/ largefile, wchar
-#
+# BR2_PACKAGE_BCACHE_TOOLS is not set
 # BR2_PACKAGE_CDRKIT is not set
 # BR2_PACKAGE_CRYPTSETUP is not set
 # BR2_PACKAGE_CWIID is not set
@@ -588,10 +579,9 @@ BR2_PACKAGE_DBUS=y
 # BR2_PACKAGE_DVBSNOOP is not set
 # BR2_PACKAGE_DTV_SCAN_TABLES is not set
 # BR2_PACKAGE_EEPROG is not set
-
-#
-# eudev needs eudev /dev management
-#
+BR2_PACKAGE_EUDEV=y
+BR2_PACKAGE_PROVIDES_UDEV="eudev"
+BR2_PACKAGE_EUDEV_RULES_GEN=y
 # BR2_PACKAGE_EVEMU is not set
 # BR2_PACKAGE_EVTEST is not set
 # BR2_PACKAGE_FAN_CTRL is not set
@@ -666,16 +656,11 @@ BR2_PACKAGE_I2C_TOOLS=y
 # BR2_PACKAGE_TI_UIM is not set
 # BR2_PACKAGE_TI_UTILS is not set
 # BR2_PACKAGE_UBOOT_TOOLS is not set
-
-#
-# udisks needs udev /dev management
-#
+BR2_PACKAGE_HAS_UDEV=y
+# BR2_PACKAGE_UDISKS is not set
 # BR2_PACKAGE_USB_MODESWITCH is not set
 # BR2_PACKAGE_USB_MODESWITCH_DATA is not set
-
-#
-# usbmount requires udev to be enabled
-#
+BR2_PACKAGE_USBMOUNT=y
 # BR2_PACKAGE_USBUTILS is not set
 # BR2_PACKAGE_W_SCAN is not set
 # BR2_PACKAGE_WIPE is not set
@@ -733,7 +718,7 @@ BR2_PACKAGE_PYTHON_UCS2=y
 # BR2_PACKAGE_PYTHON_DIALOG is not set
 # BR2_PACKAGE_PYTHON_DPKT is not set
 # BR2_PACKAGE_PYTHON_FLUP is not set
-BR2_PACKAGE_PYTHON_ID3=y
+# BR2_PACKAGE_PYTHON_ID3 is not set
 # BR2_PACKAGE_PYTHON_IPY is not set
 # BR2_PACKAGE_PYTHON_IPYTHON is not set
 # BR2_PACKAGE_PYTHON_JSON_SCHEMA_VALIDATOR is not set
@@ -743,7 +728,7 @@ BR2_PACKAGE_PYTHON_ID3=y
 # BR2_PACKAGE_PYTHON_MELD3 is not set
 # BR2_PACKAGE_PYTHON_MSGPACK is not set
 # BR2_PACKAGE_PYTHON_NETIFACES is not set
-# BR2_PACKAGE_PYTHON_NFC is not set
+BR2_PACKAGE_PYTHON_NFC=y
 # BR2_PACKAGE_PYTHON_POSIX_IPC is not set
 # BR2_PACKAGE_PYTHON_PROTOBUF is not set
 # BR2_PACKAGE_PYTHON_PYASN is not set
@@ -755,10 +740,10 @@ BR2_PACKAGE_PYTHON_ID3=y
 # BR2_PACKAGE_PYTHON_PYSNMP is not set
 # BR2_PACKAGE_PYTHON_PYSNMP_APPS is not set
 # BR2_PACKAGE_PYTHON_PYSNMP_MIBS is not set
-# BR2_PACKAGE_PYTHON_PYUSB is not set
+BR2_PACKAGE_PYTHON_PYUSB=y
 # BR2_PACKAGE_PYTHON_PYZMQ is not set
 # BR2_PACKAGE_PYTHON_RTSLIB_FB is not set
-BR2_PACKAGE_PYTHON_SERIAL=y
+# BR2_PACKAGE_PYTHON_SERIAL is not set
 # BR2_PACKAGE_PYTHON_SETUPTOOLS is not set
 # BR2_PACKAGE_PYTHON_SIMPLEJSON is not set
 BR2_PACKAGE_PYTHON_SMBUS=y
@@ -852,9 +837,7 @@ BR2_PACKAGE_BOTAN_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBSHA1 is not set
 # BR2_PACKAGE_LIBSSH2 is not set
 # BR2_PACKAGE_NETTLE is not set
-BR2_PACKAGE_OPENSSL=y
-# BR2_PACKAGE_OPENSSL_BIN is not set
-# BR2_PACKAGE_OPENSSL_ENGINES is not set
+# BR2_PACKAGE_OPENSSL is not set
 # BR2_PACKAGE_POLARSSL is not set
 
 #
@@ -878,7 +861,7 @@ BR2_PACKAGE_OPENSSL=y
 # BR2_PACKAGE_LIBCONFIG is not set
 # BR2_PACKAGE_LIBCONFUSE is not set
 # BR2_PACKAGE_LIBFUSE is not set
-# BR2_PACKAGE_LIBLOCKFILE is not set
+BR2_PACKAGE_LIBLOCKFILE=y
 
 #
 # libnfs needs a toolchain w/ RPC and LARGEFILE
@@ -949,24 +932,15 @@ BR2_PACKAGE_WEBKIT_ARCH_SUPPORTS=y
 # BR2_PACKAGE_DTC is not set
 # BR2_PACKAGE_LCDAPI is not set
 # BR2_PACKAGE_LIBAIO is not set
-
-#
-# libatasmart requires udev to be enabled
-#
+# BR2_PACKAGE_LIBATASMART is not set
 # BR2_PACKAGE_LIBCEC is not set
 # BR2_PACKAGE_LIBFREEFARE is not set
 # BR2_PACKAGE_LIBFTDI is not set
 # BR2_PACKAGE_LIBHID is not set
-
-#
-# libinput needs udev /dev management
-#
+# BR2_PACKAGE_LIBINPUT is not set
 # BR2_PACKAGE_LIBIQRF is not set
 # BR2_PACKAGE_LIBLLCP is not set
-
-#
-# libmbim needs udev /dev management and a toolchain w/ wchar, threads
-#
+# BR2_PACKAGE_LIBMBIM is not set
 # BR2_PACKAGE_LIBNFC is not set
 # BR2_PACKAGE_LIBPCIACCESS is not set
 # BR2_PACKAGE_LIBPHIDGET is not set
@@ -976,7 +950,7 @@ BR2_PACKAGE_WEBKIT_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBSERIAL is not set
 # BR2_PACKAGE_LIBSOC is not set
 BR2_PACKAGE_LIBUSB=y
-# BR2_PACKAGE_LIBUSB_COMPAT is not set
+BR2_PACKAGE_LIBUSB_COMPAT=y
 # BR2_PACKAGE_LIBV4L is not set
 # BR2_PACKAGE_LIBXKBCOMMON is not set
 # BR2_PACKAGE_MTDEV is not set
@@ -1280,13 +1254,15 @@ BR2_PACKAGE_READLINE=y
 # BR2_PACKAGE_BANDWIDTHD is not set
 # BR2_PACKAGE_BCUSDK is not set
 # BR2_PACKAGE_BIND is not set
-# BR2_PACKAGE_BLUEZ_UTILS is not set
-BR2_PACKAGE_BLUEZ5_UTILS=y
-# BR2_PACKAGE_BLUEZ5_UTILS_OBEX is not set
-BR2_PACKAGE_BLUEZ5_UTILS_CLIENT=y
-BR2_PACKAGE_BLUEZ5_UTILS_GATTTOOL=y
-BR2_PACKAGE_BLUEZ5_UTILS_EXPERIMENTAL=y
-BR2_PACKAGE_BLUEZ5_UTILS_TEST=y
+BR2_PACKAGE_BLUEZ_UTILS=y
+BR2_PACKAGE_BLUEZ_UTILS_COMPAT=y
+BR2_PACKAGE_BLUEZ_UTILS_AUDIO=y
+BR2_PACKAGE_BLUEZ_UTILS_USB=y
+BR2_PACKAGE_BLUEZ_UTILS_GATT=y
+
+#
+# bluez5-utils conflicts with older bluez-utils version
+#
 # BR2_PACKAGE_BMON is not set
 # BR2_PACKAGE_BOA is not set
 # BR2_PACKAGE_BRIDGE_UTILS is not set
@@ -1302,7 +1278,11 @@ BR2_PACKAGE_BLUEZ5_UTILS_TEST=y
 # BR2_PACKAGE_DHCPCD is not set
 # BR2_PACKAGE_DHCPDUMP is not set
 # BR2_PACKAGE_DNSMASQ is not set
-# BR2_PACKAGE_DROPBEAR is not set
+BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_DROPBEAR_DISABLE_REVERSEDNS=y
+BR2_PACKAGE_DROPBEAR_SMALL=y
+# BR2_PACKAGE_DROPBEAR_WTMP is not set
+# BR2_PACKAGE_DROPBEAR_LASTLOG is not set
 # BR2_PACKAGE_EBTABLES is not set
 # BR2_PACKAGE_ETHTOOL is not set
 # BR2_PACKAGE_FAIFA is not set
@@ -1337,10 +1317,7 @@ BR2_PACKAGE_BLUEZ5_UTILS_TEST=y
 # BR2_PACKAGE_MEMCACHED is not set
 # BR2_PACKAGE_MII_DIAG is not set
 # BR2_PACKAGE_MINIDLNA is not set
-
-#
-# modemmanager needs udev /dev management and a toolchain w/ largefile, wchar, threads, IPv6
-#
+# BR2_PACKAGE_MODEM_MANAGER is not set
 # BR2_PACKAGE_MONGOOSE is not set
 # BR2_PACKAGE_MONGREL2 is not set
 # BR2_PACKAGE_MROUTED is not set
@@ -1352,10 +1329,7 @@ BR2_PACKAGE_BLUEZ5_UTILS_TEST=y
 # BR2_PACKAGE_NETPLUG is not set
 # BR2_PACKAGE_NETSNMP is not set
 # BR2_PACKAGE_NETSTAT_NAT is not set
-
-#
-# NetworkManager needs udev /dev management and a toolchain w/ IPv6, largefile, wchar, threads, headers >= 3.7
-#
+# BR2_PACKAGE_NETWORK_MANAGER is not set
 # BR2_PACKAGE_NFACCT is not set
 # BR2_PACKAGE_NFTABLES is not set
 # BR2_PACKAGE_NGINX is not set
@@ -1369,7 +1343,7 @@ BR2_PACKAGE_BLUEZ5_UTILS_TEST=y
 # BR2_PACKAGE_OLSR is not set
 # BR2_PACKAGE_OPENNTPD is not set
 # BR2_PACKAGE_OPENOBEX is not set
-BR2_PACKAGE_OPENSSH=y
+# BR2_PACKAGE_OPENSSH is not set
 # BR2_PACKAGE_OPENSWAN is not set
 # BR2_PACKAGE_OPENVPN is not set
 # BR2_PACKAGE_P910ND is not set
@@ -1458,10 +1432,13 @@ BR2_PACKAGE_OPENSSH=y
 # BR2_PACKAGE_DIALOG is not set
 # BR2_PACKAGE_DTACH is not set
 # BR2_PACKAGE_FILE is not set
-# BR2_PACKAGE_GNUPG is not set
+BR2_PACKAGE_GNUPG=y
+# BR2_PACKAGE_GNUPG_RSA is not set
+BR2_PACKAGE_GNUPG_GPGV=y
+BR2_PACKAGE_GNUPG_GPGSPLIT=y
 # BR2_PACKAGE_GNUPG2 is not set
 # BR2_PACKAGE_INOTIFY_TOOLS is not set
-# BR2_PACKAGE_LOCKFILE_PROGS is not set
+BR2_PACKAGE_LOCKFILE_PROGS=y
 # BR2_PACKAGE_LOGROTATE is not set
 # BR2_PACKAGE_LOGSURFER is not set
 # BR2_PACKAGE_PINENTRY is not set
@@ -1481,7 +1458,7 @@ BR2_PACKAGE_OPENSSH=y
 # BR2_PACKAGE_HTOP is not set
 # BR2_PACKAGE_IPRUTILS is not set
 # BR2_PACKAGE_KEYUTILS is not set
-# BR2_PACKAGE_KMOD is not set
+BR2_PACKAGE_KMOD=y
 # BR2_PACKAGE_LXC is not set
 # BR2_PACKAGE_MONIT is not set
 # BR2_PACKAGE_NCDU is not set
@@ -1492,7 +1469,11 @@ BR2_PACKAGE_OPENSSH=y
 # BR2_PACKAGE_SMACK is not set
 # BR2_PACKAGE_SUPERVISOR is not set
 BR2_PACKAGE_SYSTEMD_ARCH_SUPPORTS=y
-# BR2_PACKAGE_UTIL_LINUX is not set
+BR2_PACKAGE_UTIL_LINUX=y
+BR2_PACKAGE_UTIL_LINUX_LIBBLKID=y
+# BR2_PACKAGE_UTIL_LINUX_LIBMOUNT is not set
+BR2_PACKAGE_UTIL_LINUX_LIBUUID=y
+# BR2_PACKAGE_UTIL_LINUX_BINARIES is not set
 
 #
 # Text editors and viewers
@@ -1511,7 +1492,7 @@ BR2_PACKAGE_SYSTEMD_ARCH_SUPPORTS=y
 #
 BR2_PACKAGE_RPI_USERLAND=y
 # BR2_PACKAGE_RPI_USERLAND_START_VCFILED is not set
-# BR2_PACKAGE_WIRINGPI is not set
+BR2_PACKAGE_WIRINGPI=y
 
 #
 # Filesystem images
