Add SFTP server for on-board dev

--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2014.11-g7fba88c-dirty Configuration
+# Buildroot 2014.11-g5915153 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -1287,7 +1287,7 @@ BR2_PACKAGE_DROPBEAR_SMALL=y
 # BR2_PACKAGE_ETHTOOL is not set
 # BR2_PACKAGE_FAIFA is not set
 # BR2_PACKAGE_FPING is not set
-# BR2_PACKAGE_GESFTPSERVER is not set
+BR2_PACKAGE_GESFTPSERVER=y
 # BR2_PACKAGE_HIAWATHA is not set
 # BR2_PACKAGE_HOSTAPD is not set
 # BR2_PACKAGE_HTTPING is not set
