--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2014.11-g5915153 Configuration
+# Buildroot 2014.11-g5b6aea1 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -941,7 +941,8 @@ BR2_PACKAGE_WEBKIT_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBIQRF is not set
 # BR2_PACKAGE_LIBLLCP is not set
 # BR2_PACKAGE_LIBMBIM is not set
-# BR2_PACKAGE_LIBNFC is not set
+BR2_PACKAGE_LIBNFC=y
+BR2_PACKAGE_LIBNFC_EXAMPLES=y
 # BR2_PACKAGE_LIBPCIACCESS is not set
 # BR2_PACKAGE_LIBPHIDGET is not set
 # BR2_PACKAGE_LIBQMI is not set
