Add code to talk to DS18B20 temp sensors

--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2014.11-g5b6aea1 Configuration
+# Buildroot 2014.11-gdb8f118-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -577,6 +577,7 @@ BR2_PACKAGE_DBUS=y
 # BR2_PACKAGE_DMRAID is not set
 # BR2_PACKAGE_DVB_APPS is not set
 # BR2_PACKAGE_DVBSNOOP is not set
+BR2_PACKAGE_DS18B20=y
 # BR2_PACKAGE_DTV_SCAN_TABLES is not set
 # BR2_PACKAGE_EEPROG is not set
 BR2_PACKAGE_EUDEV=y
