--- a/.config
+++ b/.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2014.11-gdb8f118-dirty Configuration
+# Buildroot 2014.11-ge47e0cd-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 
@@ -558,7 +558,58 @@ BR2_PACKAGE_QT5_JSCORE_AVAILABLE=y
 #
 # BR2_PACKAGE_AM33X_CM3 is not set
 # BR2_PACKAGE_B43_FIRMWARE is not set
-# BR2_PACKAGE_LINUX_FIRMWARE is not set
+BR2_PACKAGE_LINUX_FIRMWARE=y
+
+#
+# Audio firmware
+#
+# BR2_PACKAGE_LINUX_FIRMWARE_INTEL_SST_DSP is not set
+
+#
+# WiFi firmware
+#
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_6002 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_6003 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_6004 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_7010 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_9170 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ATHEROS_9271 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_BRCM_BCM43XX is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_BRCM_BCM43XXX is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_3160 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_5000 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7260 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_IWLWIFI_7265 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_LIBERTAS_SD8686_V8 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_LIBERTAS_SD8686_V9 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_LIBERTAS_SD8688 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_MWIFIEX_SD8787 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT61 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT73 is not set
+BR2_PACKAGE_LINUX_FIRMWARE_RALINK_RT2XX=y
+# BR2_PACKAGE_LINUX_FIRMWARE_RTL_81XX is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RTL_87XX is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RTL_88XX is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_TI_WL127X is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_TI_WL128X is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_TI_WL18XX is not set
+
+#
+# Ethernet firmware
+#
+# BR2_PACKAGE_LINUX_FIRMWARE_BNX2X is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_CXGB4_T4 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_CXGB4_T5 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_RTL_8169 is not set
+
+#
+# DVB firmware
+#
+# BR2_PACKAGE_LINUX_FIRMWARE_AS102 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_DIB0700 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_ITETECH_IT9135 is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_H5_DRXK is not set
+# BR2_PACKAGE_LINUX_FIRMWARE_XCx000 is not set
 # BR2_PACKAGE_SUNXI_BOARDS is not set
 # BR2_PACKAGE_UX500_FIRMWARE is not set
 # BR2_PACKAGE_ZD1211_FIRMWARE is not set
@@ -1209,7 +1260,7 @@ BR2_PACKAGE_NCURSES=y
 # BR2_PACKAGE_NCURSES_TARGET_PROGS is not set
 # BR2_PACKAGE_NEWT is not set
 # BR2_PACKAGE_PCRE is not set
-# BR2_PACKAGE_POPT is not set
+BR2_PACKAGE_POPT=y
 BR2_PACKAGE_READLINE=y
 # BR2_PACKAGE_SLANG is not set
 # BR2_PACKAGE_TCLAP is not set
@@ -1373,7 +1424,7 @@ BR2_PACKAGE_NTP_NTPDATE=y
 # BR2_PACKAGE_RADVD is not set
 # BR2_PACKAGE_RPCBIND is not set
 # BR2_PACKAGE_RSH_REDONE is not set
-# BR2_PACKAGE_RSYNC is not set
+BR2_PACKAGE_RSYNC=y
 # BR2_PACKAGE_RTORRENT is not set
 # BR2_PACKAGE_RTPTOOLS is not set
 # BR2_PACKAGE_SAMBA is not set
@@ -1407,9 +1458,19 @@ BR2_PACKAGE_NTP_NTPDATE=y
 # BR2_PACKAGE_VSFTPD is not set
 # BR2_PACKAGE_VTUN is not set
 # BR2_PACKAGE_WIRELESS_REGDB is not set
-# BR2_PACKAGE_WIRELESS_TOOLS is not set
+BR2_PACKAGE_WIRELESS_TOOLS=y
+BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 # BR2_PACKAGE_WIRESHARK is not set
-# BR2_PACKAGE_WPA_SUPPLICANT is not set
+BR2_PACKAGE_WPA_SUPPLICANT=y
+# BR2_PACKAGE_WPA_SUPPLICANT_AP_SUPPORT is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_EAP is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_HOTSPOT is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_DEBUG_SYSLOG is not set
+BR2_PACKAGE_WPA_SUPPLICANT_WPS=y
+BR2_PACKAGE_WPA_SUPPLICANT_CLI=y
+BR2_PACKAGE_WPA_SUPPLICANT_PASSPHRASE=y
+# BR2_PACKAGE_WPA_SUPPLICANT_DBUS_OLD is not set
+# BR2_PACKAGE_WPA_SUPPLICANT_DBUS_NEW is not set
 # BR2_PACKAGE_WVDIAL is not set
 # BR2_PACKAGE_XINETD is not set
 # BR2_PACKAGE_XL2TP is not set
